--- a/lesson/intro_slides.slides.html
+++ b/lesson/intro_slides.slides.html
@@ -7565,13 +7565,12 @@ like 3D models, charts, graphs and figures, and interactive controls.</li>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Tools-and-Setup">Tools and Setup<a class="anchor-link" href="#Tools-and-Setup">¶</a></h1><ul>
-<li><p>data : <a href="https://swcarpentry.github.io/python-novice-inflammation/">https://swcarpentry.github.io/python-novice-inflammation/</a></p>
-<ul>
-<li>swc-python<ul>
-<li>python-novice-inflammation-code.zip</li>
-<li>python-novice-inflammation-data.zip</li>
-</ul>
+<li><p>Materials : <a href="https://github.com/mwakok/software_carpentry_learner">https://github.com/mwakok/software_carpentry_learner</a></p>
 </li>
+<li><p>folder-name</p>
+<ul>
+<li>code</li>
+<li>data</li>
 </ul>
 </li>
 </ul>
